should fix pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,9 +24,10 @@ install_requires =
 [options.extras_require]
 dev =
     pytest>=7.4.2  # Adding pytest as a development dependency
+    flake8>=7.1.1
 
 [options.packages.find]
-where = mypubsub
+where = .
 
 [options.entry_points]
 # Define any console scripts if your project has CLI tools
