--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description = A basic Python library for a Singleton Pub Sub System
 author = Sahil Khanna
 author_email = mail@sahilkhanna.org
 license = MIT
-long_description = file: README.md
+long_description = file: readme.md
 long_description_content_type = text/markdown
 url = https://github.com/sahilkhanna/my-pub-sub/
 classifiers =
